# SocialNetworkAnalysis

./: .gitignore  LICENSE  README.md  config.template.py  index.html  my-edgy-friend-network.edges  my-edgy-friends.edges  my-nody-friends.nodes  pyproject.toml  requirements.txt  tobisTwitter.html  tobisTwitter.ipynb  twitterSNA.ipynb  twitter_crawler.html  twitter_crawler.ipynb  visualisation.html
HTML/: 1stVisualisation.html  2ndVisualisation.html  notebook.html  twitterSNA.html  visualisation.html
