[tool.poetry]
name = "socialnetworkanalysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
numpy = "^1.19.4"
pandas = "^1.1.4"
plotly = "^4.12.0"
tweepy = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
